# cil-project-main

./: .gitignore  README.md  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
cilproject/: classifiers.py  dataset.py  dummy.py  embedders.py  evaluate.py  experiment.py  memory.py  models.py  predictions.py  train.py
data/: README.md
preds/results 2/: result_1.txt  result_10.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  result_9.txt
