[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cilproject"
version = "0.0.1"
description = "A package for the CIL Project of group 1"
authors = [
  { name = "Dylan Hillier", email = "dylanslavinhillier@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/DylanASHillier/cil-project.git"